// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.push.sh given: [case1] plan mode on feature branch when: [t0] branch has commits and meter allows push then: shows tree with push target and pr title 1`] = `
"🐢 heres the wave...

🐚 git.commit.push --mode plan
   ├─ push: origin/turtle/feature
   ├─ pr
   │  ├─ title: feat: first commit
   │  └─ action: findsert
   └─ meter
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.push.sh given: [case2] author guard in apply mode when: [t0] HEAD commit authored by a human (not seaturtle[bot]) then: exits with error about author 1`] = `
"🐢 bummer dude...

🐚 git.commit.push
   └─ error: HEAD commit not authored by seaturtle[bot]

push only works for commits made by seaturtle[bot].
use git.commit.set to create a proper commit first.
"
`;

exports[`git.commit.push.sh given: [case5] push not allowed when: [t0] no meter state file then: exits with push not allowed 1`] = `
"🐢 bummer dude...

🐚 git.commit.push
   └─ error: push not allowed

ask your human to grant with --push allow:
  $ git.commit.uses set --quant N --push allow
"
`;

exports[`git.commit.push.sh given: [case5] push not allowed when: [t1] meter has push: block then: exits with push not allowed 1`] = `
"🐢 bummer dude...

🐚 git.commit.push
   └─ error: push not allowed

ask your human to grant with --push allow:
  $ git.commit.uses set --quant N --push allow
"
`;

exports[`git.commit.push.sh given: [case9] stacked branch pr title when: [t0] branch B created from branch A, both with commits then: pr title is first commit unique to branch B 1`] = `
"🐢 heres the wave...

🐚 git.commit.push --mode plan
   ├─ push: origin/turtle/branch-b
   ├─ pr
   │  ├─ title: feat: B1 first on branch-b
   │  └─ action: findsert
   └─ meter
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.push.sh given: [case12] keyrack not configured (sad path) when: [t0] no keyrack.yml in repo and no host manifest then: exits with clear message to ask human to configure 1`] = `
"
🐢 bummer dude, keyrack token fetch failed


⛈️ BadRequestError: no keyrack.yml found in repo

[args] keyrack,get,--key,EHMPATHY_SEATURTLE_PROD_GITHUB_TOKEN,--allow-dangerous,--json


to fix this, ask a human to either:
  1. unlock their keyrack for this key:
     $ rhx keyrack unlock --key EHMPATHY_SEATURTLE_PROD_GITHUB_TOKEN

  2. or add the ehmpath keyrack, so ehmpaths like us can unlock our own keys:
     $ npx rhachet roles init --repo ehmpathy --role mechanic --init keyrack.ehmpath

"
`;

exports[`git.commit.push.sh given: [case14] push-only auto-revoke plan display when: [t0] uses 0 with push allowed (push-only mode) then: plan shows push: allowed to blocked (revoked) 1`] = `
"🐢 heres the wave...

🐚 git.commit.push --mode plan
   ├─ push: origin/turtle/push-revoke
   ├─ pr
   │  ├─ title: feat: prior commit
   │  └─ action: findsert
   └─ meter
      └─ push: allowed → blocked (revoked)

run with --mode apply to execute
"
`;

exports[`git.commit.push.sh given: [case15] real user locked, no ehmpath host (sad path) when: [t0] keyrack.yml exists but no host manifest then: exits with clear unlock message, no fallback noise 1`] = `
"
🐢 bummer dude, keyrack returned empty token

keyrack output:
{
  "status": "granted",
  "grant": {
    "slug": "ehmpathy.all.EHMPATHY_SEATURTLE_PROD_GITHUB_TOKEN",
    "key": {
      "secret": "",
      "grade": {
        "protection": "plaintext",
        "duration": "permanent"
      }
    },
    "source": {
      "vault": "os.envvar",
      "mech": "PERMANENT_VIA_REPLICA"
    },
    "env": "all",
    "org": "ehmpathy"
  }
}

"
`;

exports[`git.commit.push.sh given: [case16] keyrack.yml does not declare requested key (sad path) when: [t0] keyrack.yml exists but key declaration absent then: exits with clear message about key not declared 1`] = `
"
🐢 bummer dude, keyrack returned empty token

keyrack output:
{
  "status": "granted",
  "grant": {
    "slug": "ehmpathy.all.EHMPATHY_SEATURTLE_PROD_GITHUB_TOKEN",
    "key": {
      "secret": "",
      "grade": {
        "protection": "plaintext",
        "duration": "permanent"
      }
    },
    "source": {
      "vault": "os.envvar",
      "mech": "PERMANENT_VIA_REPLICA"
    },
    "env": "all",
    "org": "ehmpathy"
  }
}

"
`;

exports[`git.commit.push.sh given: [case18] CI watch reminder after successful push when: [t0] push and pr creation succeed then: shows full output with vibey reminder at end 1`] = `
"🐢 cowabunga!

🐚 git.commit.push
   ├─ push: origin/turtle/feature ✓
   ├─ pr: pr #[] (found)
   └─ meter
      └─ push: allowed

🌊 now lets ride the ci wave and catch any wipeouts
   └─ git release --watch || npx rhachet run --skill show.gh.test.errors
"
`;

exports[`git.commit.push.sh given: [case19] local main behind origin/main (PR #269 regression) when: [t1] also verify PR body excludes origin/main commits then: pr body only has feature branch commit body 1`] = `
"🐢 heres the wave...

🐚 git.commit.push --mode plan
   ├─ push: origin/turtle/feature
   ├─ pr
   │  ├─ title: feat: D unique to feature
   │  └─ action: findsert
   └─ meter
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.commit.push.sh given: [case20] both keyrack sources locked (sad path) when: [t0] no user keyrack, no ehmpath host manifest then: exits with first error only, no fallback noise 1`] = `
"
🐢 bummer dude, keyrack returned empty token

keyrack output:
{
  "status": "granted",
  "grant": {
    "slug": "ehmpathy.all.EHMPATHY_SEATURTLE_PROD_GITHUB_TOKEN",
    "key": {
      "secret": "",
      "grade": {
        "protection": "plaintext",
        "duration": "permanent"
      }
    },
    "source": {
      "vault": "os.envvar",
      "mech": "PERMANENT_VIA_REPLICA"
    },
    "env": "all",
    "org": "ehmpathy"
  }
}

"
`;

exports[`git.commit.push.sh given: [case21] global blocker guard when: [t0] global blocker is active but local meter allows push then: exits with global blocked error 1`] = `
"🐢 bummer dude...

🐚 git.commit.push
   └─ error: commits blocked globally

ask your human to lift:
  $ git.commit.uses allow --global
"
`;
